# unilint

./: CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
docs/: dependencies.md
requirements/: dev.txt
src/unilint/: config.py  exceptions.py  executor.py  main.py  utils.py
src/unilint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py
tests/testcase/: fixtures.py
