[project]
name = "unilint"
dynamic = ["version"]
authors = [
  { name="Viktor Mediankin", email="mediankin.viktor@gmail.com" },
]
description = "Union of linter packages"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "attrs >=21.2.0, <=22.2.0",
    "autoflake >=1.6.0, <=1.7.8",
    "black >=22.1.0, <=22.10.0",
    "click >=8.0.0, <=8.1.3",
    "docformatter==1.5.0",
    "eradicate==2.1.0",
    "flake8==5.0.0",
    "flake8-eradicate==1.4.0",
    "importlib-metadata >=4.2.0, <=4.13.0",
    "isort==5.10.1",
    "mccabe==0.7.0",
    "mypy==0.930",
    "mypy-extensions==0.4.3",
    "pathspec==0.10.3",
    "platformdirs >=2.5.0, <=2.6.2",
    "pycodestyle==2.9.1",
    "pydocstyle==6.2.1",
    "pyflakes==2.5.0",
    "snowballstemmer==2.2.0",
    "tomli==2.0.1",
    "typed-ast==1.5.4",
    "typing_extensions >=4.3.0, <=4.4.0",
    "untokenize==0.1.1",
    "zipp==3.11.0",
]

[project.scripts]
unilint = "unilint.main:cli"

[tool.setuptools.dynamic]
version = {attr = "unilint.__init__.__version__"}
